Agrego el navbar a las demas paginas y termino el menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="barra navbar navbar-expand-lg fixed-top">
             <div class="container">
-                <a href="#" class="navbar-brand">El Bodegón de Alberto</a>
+                <a href="#" class="navbar-brand"> <span>El Bodegón de Alberto</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-start" aria-controls="navbar-start" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -26,7 +26,7 @@
                     </div>
             </div> 
     </nav>
-    <main class="">
+    <main>
         <div class="burbuja">
             <h1>El Bodegón de Alberto</h1>
             <p>¡Bienvenidos a nuestro restaurante patagónico, donde la magia de la naturaleza se fusiona con la exquisitez de la cocina! En el corazón de la Patagonia, hemos creado un espacio donde cada plato es una aventura culinaria, y cada bocado te transporta a los paisajes más impresionantes de esta región única en el mundo.</p>
@@ -34,7 +34,7 @@
             <a href="./pages/menu.html">Ver mas</a>
         </div>
     </main>
-    <h2>Nuestro Lugar</h2>
+    <h2 class=>Nuestro Lugar</h2>
     <div class="nuestro">
         <div class="resta"></div>
         <div class="restaright">
