--- a/pages/quien.html
+++ b/pages/quien.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../archivos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/archivos.css">
     <title>¿Quienes somos?</title>
 </head>
 <body>
@@ -27,5 +29,9 @@
             Cada día nos esforzamos por superar las expectativas, brindando un servicio cálido y personalizado en un ambiente acogedor que refleja la calidez y la hospitalidad de la Patagonia. En resumen, somos mucho más que un restaurante; somos una ventana a la esencia misma de la Patagonia, donde cada visita es una oportunidad para explorar y saborear lo mejor de esta maravillosa región.
         </p>
     </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
