--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,21 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../archivos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="/archivos.css">
     <title>Contacto</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="quien.html">¿Quienes somos?</a></li>
-                <li><a href="trabaja.html">Trabaja Con Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav class="barra navbar navbar-expand-lg fixed-top">
+        <div class="container">
+            <a href="#" class="navbar-brand">El Bodegón de Alberto</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-start" aria-controls="navbar-start" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+                <div class="collapse navbar-collapse" id="navbar-start">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/menu.html">Menu</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/quien.html">¿Quienes somos?</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/trabaja.html">Trabaja Con Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+        </div> 
+</nav>
     <h1 class="texto">
         Numero de Contacto
     </h1>
@@ -27,5 +35,10 @@
     <h2>Facebook: Restaurante Patagonico</h2>
     <h2>Direccion:</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d6009.73957824282!2d-71.30368923744149!3d-41.13736840456859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1smoreno%20569!5e0!3m2!1ses!2sar!4v1711954177473!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
