--- a/pages/menu.html
+++ b/pages/menu.html
@@ -3,66 +3,150 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../archivos.css">
     <title>Menu Patagonico</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="quien.html">¿Quienes somos?</a></li>
-                <li><a href="trabaja.html">Trabaja Con Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <p class="tm">Platos Principales</p>
-    <table border="3" cellspacing="3" cellpadding="3">
-        <th><img src="../media/salmon.jpg" alt="salmon" class="imagenmenu">
-            <p>Salmon con fina especias</p>
-        </th>
-        <th><img src="../media/lasagna.jpg" alt="Lasagna" class="imagenmenu">
-            <p>Lasagna</p>
-        </th>
-        <th><img src="../media/pizza.jpg" alt="pizza" class="imagenmenu">
-            <p>Pizza</p>
-        </th>
-        <th>
-            <img src="../media/carne.jpg" alt="Carne" class="imagenmenu">
-            <p>Carne Patagonica con Verdudas</p>
-        </th>
-    </table>
-    <p class="tm">Bebidas</p>
-    <table border="3" cellspacing="3" cellpadding="3">
-    <th>
-        <img src="../media/cocktail.jpg" alt="cocktail" class="imagenmenu">
-        <p>Cocktail Patagonico</p>
-    </th>
-    <th>
-        <img src="../media/cerveza.jpg" alt="cerveza" class="imagenmenu">
-        <p>Cerveza IPA Patagonia</p>
-    </th>
-    <th>
-        <img src="../media/cocktail2.jpg" alt="Cocktail2" class="imagenmenu">
-        <p>Cocktail Tequila</p>
-    </th>
-</table>
-    <p class="tm">Postres</p>
-    <table border="3" cellspacing="3" cellpadding="3">
-    <th>
-        <img src="../media/crepe.jpg" alt="crepee" class="imagen1">
-        <p>Crepe Nutella</p>
-    </th>
-    <th>
-        <img src="../media/torta.jpg" alt="Torta" class="imagen1">
-        <p>Torta Patagonica</p>
-    </th>
-    <th>
-        <img src="../media/tiramisu.jpg" alt="tiramisu" class="imagen1">
-        <p>Tiramisu</p>
-    </th>
-</table>
+    <nav class="barra navbar navbar-expand-lg fixed-top">
+        <div class="container">
+            <a href="/index.html" class="navbar-brand"> <span>El Bodegón de Alberto</span></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-start" aria-controls="navbar-start" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+                <div class="collapse navbar-collapse" id="navbar-start">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="menu.html">Menu</a></li>
+                        <li class="nav-item"><a class="nav-link" href="quien.html">¿Quienes somos?</a></li>
+                        <li class="nav-item"><a class="nav-link" href="trabaja.html">Trabaja Con Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+    </nav>
+    <h2>Menu</h2>
+    <div class="row row-cols-1 row-cols-sm-2 g-3">
+        <div class="col">
+          <div class="card">
+            <img src="../media/carne.jpg" class="card-img-top" alt="card-grid-image">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../media/lasagna.jpg" class="card-img-top" alt="card-grid-image">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../media/pizza.jpg" class="card-img-top" alt="card-grid-image">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../media/salmon.jpg" class="card-img-top" alt="card-grid-image">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+    </div>
+    <h2>Bebidas</h2>
+    <div class="row row-cols-1 row-cols-sm-2 g-3">
+        <div class="col">
+            <div class="card">
+              <img src="../media/cocktail.jpg" class="card-img-top" alt="card-grid-image">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="../media/cocktail2.jpg" class="card-img-top" alt="card-grid-image">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="../media/martini-4828247_1280.jpg" class="card-img-top" alt="card-grid-image">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="../media/cerveza.jpg" class="card-img-top" alt="card-grid-image">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+        </div>
+    </div>
+        <h2>Postres</h2>
+        <div class="row row-cols-1 row-cols-sm-2 g-3">
+          <div class="col">
+            <div class="card">
+              <img src="../media/torta.jpg" class="card-img-top" alt="card-grid-image">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="../media/tiramisu.jpg" class="card-img-top" alt="card-grid-image">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="../media/crepe.jpg" class="card-img-top" alt="card-grid-image">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="../media/helado.jpg" class="card-img-top" alt="card-grid-image">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      <footer>
+        <p>Todos los derechos reservador por copyright.</p>
+        <p>El sitio fue desarrollado por Matias Gonzalez</p>
+    </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
