index y menu totalmente responsivo

--- a/index.html
+++ b/index.html
@@ -10,31 +10,32 @@
 </head>
 <body>
     <nav class="barra navbar navbar-expand-lg fixed-top">
-            <div class="container">
-                <a href="#" class="navbar-brand"> <span>El Bodegón de Alberto</span></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-start" aria-controls="navbar-start" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                </button>
-                    <div class="collapse navbar-collapse" id="navbar-start">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                            <li class="nav-item"><a class="nav-link" href="./pages/menu.html">Menu</a></li>
-                            <li class="nav-item"><a class="nav-link" href="./pages/quien.html">¿Quienes somos?</a></li>
-                            <li class="nav-item"><a class="nav-link" href="./pages/trabaja.html">Trabaja Con Nosotros</a></li>
-                            <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
-                        </ul>
-                    </div>
-            </div> 
+                <div class="container">
+                    <a href="#" class="navbar-brand"> <span>El Bodegón de Alberto</span></a>
+                    <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbar-start"
+                        aria-controls="navbar-start" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                        <div class="collapse navbar-collapse" id="navbar-start">
+                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                                <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                                <li class="nav-item"><a class="nav-link" href="./pages/menu.html">Menu</a></li>
+                                <li class="nav-item"><a class="nav-link" href="./pages/quien.html">¿Quienes somos?</a></li>
+                                <li class="nav-item"><a class="nav-link" href="./pages/trabaja.html">Trabaja Con Nosotros</a></li>
+                                <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
+                            </ul>
+                        </div>
+                </div> 
     </nav>
-    <main>
-        <div class="burbuja">
+    <main class="row">
+        <div class="burbuja col-sm-1 ">
             <h1>El Bodegón de Alberto</h1>
             <p>¡Bienvenidos a nuestro restaurante patagónico, donde la magia de la naturaleza se fusiona con la exquisitez de la cocina! En el corazón de la Patagonia, hemos creado un espacio donde cada plato es una aventura culinaria, y cada bocado te transporta a los paisajes más impresionantes de esta región única en el mundo.</p>
             <p>Si quieres conocer nuestro Menú</p>
-            <a href="./pages/menu.html">Ver mas</a>
+            <a class="" href="./pages/menu.html">Ver mas</a>
         </div>
     </main>
-    <h2 class=>Nuestro Lugar</h2>
+    <h2 class= container-fluid>Nuestro Lugar</h2>
     <div class="nuestro">
         <div class="resta"></div>
         <div class="restaright">
@@ -42,64 +43,67 @@
         </div>
     </div>
     <h2>Reseña de Criticos Profesionales</h2>
-    <div class="row">
-            <div class="col-12 col-md-12 col-lg-3">
-                <div class="card shadow-sm border-0 px-2 py-3 mb-4">
-                    <div class="text-center">
-                        <div class="img1"></div>
+    <section class="product">
+        <div class="container">
+            <div class="row">
+                    <div class="col-12 col-md-12 col-lg-3">
+                        <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                            <div class="text-center">
+                                <img src="media/persona.jpg" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Marcelo Casanno</h5>
+                                <p>
+                                    "Mi visita a Parrilla Don Alberto fue una experiencia increíble. Desde el momento en que entré, me recibieron con una sonrisa y un ambiente acogedor. Probé el cordero patagónico, y puedo decir que fue una de las mejores comidas que he tenido. La carne estaba tierna y sabrosa, y los acompañamientos eran deliciosos. El servicio era impecable, atento y amable en todo momento. Definitivamente, volveré la próxima vez que esté en Bariloche".
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Marcelo Casanno</h5>
-                        <p>
-                            "Mi visita a Parrilla Don Alberto fue una experiencia increíble. Desde el momento en que entré, me recibieron con una sonrisa y un ambiente acogedor. Probé el cordero patagónico, y puedo decir que fue una de las mejores comidas que he tenido. La carne estaba tierna y sabrosa, y los acompañamientos eran deliciosos. El servicio era impecable, atento y amable en todo momento. Definitivamente, volveré la próxima vez que esté en Bariloche".
-                        </p>
-                    </div>
-                </div>
-            </div>
 
-            <div class="col-12 col-md-12 col-lg-3">
-                <div class="card shadow-sm border-0 px-2 py-3 mb-4">
-                    <div class="text-center">
-                        <div class="img1"></div>
+                    <div class="col-12 col-md-12 col-lg-3">
+                        <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                            <div class="text-center">
+                                <img src="media/persona.jpg" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Marcelo Casanno</h5>
+                                <p>
+                                    "Mi visita a Parrilla Don Alberto fue una experiencia increíble. Desde el momento en que entré, me recibieron con una sonrisa y un ambiente acogedor. Probé el cordero patagónico, y puedo decir que fue una de las mejores comidas que he tenido. La carne estaba tierna y sabrosa, y los acompañamientos eran deliciosos. El servicio era impecable, atento y amable en todo momento. Definitivamente, volveré la próxima vez que esté en Bariloche".
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Marcelo Casanno</h5>
-                        <p>
-                            "Mi visita a Parrilla Don Alberto fue una experiencia increíble. Desde el momento en que entré, me recibieron con una sonrisa y un ambiente acogedor. Probé el cordero patagónico, y puedo decir que fue una de las mejores comidas que he tenido. La carne estaba tierna y sabrosa, y los acompañamientos eran deliciosos. El servicio era impecable, atento y amable en todo momento. Definitivamente, volveré la próxima vez que esté en Bariloche".
-                        </p>
-                    </div>
-                </div>
-            </div>
 
-            <div class="col-12 col-md-12 col-lg-3">
-                <div class="card shadow-sm border-0 px-2 py-3 mb-4">
-                    <div class="text-center">
-                        <div class="img1"></div>
+                    <div class="col-12 col-md-12 col-lg-3">
+                        <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                            <div class="text-center">
+                                <img src="media/persona.jpg" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Marcelo Casanno</h5>
+                                <p>
+                                    "Mi visita a Parrilla Don Alberto fue una experiencia increíble. Desde el momento en que entré, me recibieron con una sonrisa y un ambiente acogedor. Probé el cordero patagónico, y puedo decir que fue una de las mejores comidas que he tenido. La carne estaba tierna y sabrosa, y los acompañamientos eran deliciosos. El servicio era impecable, atento y amable en todo momento. Definitivamente, volveré la próxima vez que esté en Bariloche".
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Marcelo Casanno</h5>
-                        <p>
-                            "Mi visita a Parrilla Don Alberto fue una experiencia increíble. Desde el momento en que entré, me recibieron con una sonrisa y un ambiente acogedor. Probé el cordero patagónico, y puedo decir que fue una de las mejores comidas que he tenido. La carne estaba tierna y sabrosa, y los acompañamientos eran deliciosos. El servicio era impecable, atento y amable en todo momento. Definitivamente, volveré la próxima vez que esté en Bariloche".
-                        </p>
-                    </div>
-                </div>
-            </div>
 
-            <div class="col-12 col-md-12 col-lg-3">
-                <div class="card shadow-sm border-0 px-2 py-3 mb-4">
-                    <div class="text-center">
-                        <div class="img1"></div>
+                    <div class="col-12 col-md-12 col-lg-3">
+                        <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                            <div class="text-center">
+                                <img src="media/persona.jpg" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Marcelo Casanno</h5>
+                                <p>
+                                    "Mi visita a Parrilla Don Alberto fue una experiencia increíble. Desde el momento en que entré, me recibieron con una sonrisa y un ambiente acogedor. Probé el cordero patagónico, y puedo decir que fue una de las mejores comidas que he tenido. La carne estaba tierna y sabrosa, y los acompañamientos eran deliciosos. El servicio era impecable, atento y amable en todo momento. Definitivamente, volveré la próxima vez que esté en Bariloche".
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Marcelo Casanno</h5>
-                        <p>
-                            "Mi visita a Parrilla Don Alberto fue una experiencia increíble. Desde el momento en que entré, me recibieron con una sonrisa y un ambiente acogedor. Probé el cordero patagónico, y puedo decir que fue una de las mejores comidas que he tenido. La carne estaba tierna y sabrosa, y los acompañamientos eran deliciosos. El servicio era impecable, atento y amable en todo momento. Definitivamente, volveré la próxima vez que esté en Bariloche".
-                        </p>
-                    </div>
-                </div>
             </div>
-
-    </div>
+        </div>    
+    </section>    
     <footer>
         <p>Todos los derechos reservador por copyright.</p>
         <p>El sitio fue desarrollado por Matias Gonzalez</p>
