--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,20 +11,22 @@
 <body>
     <nav class="barra navbar navbar-expand-lg fixed-top">
         <div class="container">
-            <a href="#" class="navbar-brand">El Bodegón de Alberto</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-start" aria-controls="navbar-start" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <a href="#" class="navbar-brand"> <span>El Bodegón de Alberto</span></a>
+            <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbar-start"
+                aria-controls="navbar-start" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
                 <div class="collapse navbar-collapse" id="navbar-start">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./pages/menu.html">Menu</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./pages/quien.html">¿Quienes somos?</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./pages/trabaja.html">Trabaja Con Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./pages/contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="menu.html">Menu</a></li>
+                        <li class="nav-item"><a class="nav-link" href="quien.html">¿Quienes somos?</a></li>
+                        <li class="nav-item"><a class="nav-link" href="trabaja.html">Trabaja Con Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
                     </ul>
                 </div>
         </div> 
+    </nav>
 </nav>
     <h1 class="texto">
         Numero de Contacto
