--- a/pages/menu.html
+++ b/pages/menu.html
@@ -9,139 +9,206 @@
     <title>Menu Patagonico</title>
 </head>
 <body>
-    <nav class="barra navbar navbar-expand-lg fixed-top">
-        <div class="container">
-            <a href="/index.html" class="navbar-brand"> <span>El Bodegón de Alberto</span></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-start" aria-controls="navbar-start" aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="barra navbar navbar-expand-lg fixed-top">
+    <div class="container">
+        <a href="#" class="navbar-brand"> <span>El Bodegón de Alberto</span></a>
+        <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbar-start"
+            aria-controls="navbar-start" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-            </button>
-                <div class="collapse navbar-collapse" id="navbar-start">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="menu.html">Menu</a></li>
-                        <li class="nav-item"><a class="nav-link" href="quien.html">¿Quienes somos?</a></li>
-                        <li class="nav-item"><a class="nav-link" href="trabaja.html">Trabaja Con Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
-                    </ul>
-                </div>
-    </nav>
-    <h2>Menu</h2>
-    <div class="row row-cols-1 row-cols-sm-2 g-3">
-        <div class="col">
-          <div class="card">
-            <img src="../media/carne.jpg" class="card-img-top" alt="card-grid-image">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </button>
+            <div class="collapse navbar-collapse" id="navbar-start">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="menu.html">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link" href="quien.html">¿Quienes somos?</a></li>
+                    <li class="nav-item"><a class="nav-link" href="trabaja.html">Trabaja Con Nosotros</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                </ul>
             </div>
+    </div> 
+</nav>
+    <section class="product">
+      <div class="container">
+        <h2>Menu</h2>
+          <div class="row">
+                  <div class="col-12 col-md-12 col-lg-6">
+                      <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                          <div class="text-center">
+                              <img src="../media/salmon.jpg" alt="">
+                          </div>
+                          <div class="card-body">
+                              <h5 class="card-title">Salmon</h5>
+                              <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla assumenda ex nobis aperiam veniam aliquam.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="col-12 col-md-12 col-lg-6">
+                      <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                          <div class="text-center">
+                              <img src="../media/pizza.jpg" alt="">
+                          </div>
+                          <div class="card-body">
+                            <h5 class="card-title">Pizza</h5>
+                              <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla assumenda ex nobis aperiam veniam aliquam.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="col-12 col-md-12 col-lg-6">
+                      <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                          <div class="text-center">
+                              <img src="../media/lasagna.jpg" alt="">
+                          </div>
+                          <div class="card-body">
+                              <h5 class="card-title">Lasagna</h5>
+                              <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla assumenda ex nobis aperiam veniam aliquam.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="col-12 col-md-12 col-lg-6">
+                      <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                          <div class="text-center">
+                              <img src="../media/carne.jpg" alt="">
+                          </div>
+                          <div class="card-body">
+                              <h5 class="card-title">Carne Asada</h5>
+                              <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla assumenda ex nobis aperiam veniam aliquam.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
           </div>
+      </div>    
+      <h2>Bebidas</h2>
+      <div class="container">
+          <div class="row">
+                  <div class="col-12 col-md-12 col-lg-6">
+                      <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                          <div class="text-center">
+                              <img src="../media/cocktail.jpg" alt="">
+                          </div>
+                          <div class="card-body">
+                              <h5 class="card-title">Cocktail Tropical</h5>
+                              <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla assumenda ex nobis aperiam veniam aliquam.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="col-12 col-md-12 col-lg-6">
+                      <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                          <div class="text-center">
+                              <img src="../media/cocktail2.jpg" alt="">
+                          </div>
+                          <div class="card-body">
+                            <h5 class="card-title">Tequila</h5>
+                              <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla assumenda ex nobis aperiam veniam aliquam.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="col-12 col-md-12 col-lg-6">
+                      <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                          <div class="text-center">
+                              <img src="../media/cerveza.jpg" alt="">
+                          </div>
+                          <div class="card-body">
+                              <h5 class="card-title">Cerveza IPA</h5>
+                              <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla assumenda ex nobis aperiam veniam aliquam.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="col-12 col-md-12 col-lg-6">
+                      <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                          <div class="text-center">
+                              <img src="../media/martini-4828247_1280.jpg" alt="">
+                          </div>
+                          <div class="card-body">
+                              <h5 class="card-title">Martini</h5>
+                              <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla assumenda ex nobis aperiam veniam aliquam.
+                              </p>
+                          </div>
+                      </div>
+                  </div>
+          </div>
+      </div>
+          <h2>Postres</h2>
+          <div class="container">
+            <div class="row">
+                    <div class="col-12 col-md-12 col-lg-6">
+                        <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                            <div class="text-center">
+                                <img src="../media/helado.jpg" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Helado</h5>
+                                <p>
+                                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla assumenda ex nobis aperiam veniam aliquam.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+  
+                    <div class="col-12 col-md-12 col-lg-6">
+                        <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                            <div class="text-center">
+                                <img src="../media/crepe.jpg" alt="">
+                            </div>
+                            <div class="card-body">
+                              <h5 class="card-title">Crepe</h5>
+                                <p>
+                                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla assumenda ex nobis aperiam veniam aliquam.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+  
+                    <div class="col-12 col-md-12 col-lg-6">
+                        <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                            <div class="text-center">
+                                <img src="../media/tiramisu.jpg" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Tiramisu</h5>
+                                <p>
+                                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla assumenda ex nobis aperiam veniam aliquam.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+  
+                    <div class="col-12 col-md-12 col-lg-6">
+                        <div class="card shadow-sm border-0 px-2 py-3 mb-4">
+                            <div class="text-center">
+                                <img src="../media/torta.jpg" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Torta</h5>
+                                <p>
+                                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla assumenda ex nobis aperiam veniam aliquam.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+            </div>
         </div>
-        <div class="col">
-          <div class="card">
-            <img src="../media/lasagna.jpg" class="card-img-top" alt="card-grid-image">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="../media/pizza.jpg" class="card-img-top" alt="card-grid-image">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="../media/salmon.jpg" class="card-img-top" alt="card-grid-image">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          </div>
-        </div>
-    </div>
-    <h2>Bebidas</h2>
-    <div class="row row-cols-1 row-cols-sm-2 g-3">
-        <div class="col">
-            <div class="card">
-              <img src="../media/cocktail.jpg" class="card-img-top" alt="card-grid-image">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="../media/cocktail2.jpg" class="card-img-top" alt="card-grid-image">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="../media/martini-4828247_1280.jpg" class="card-img-top" alt="card-grid-image">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="../media/cerveza.jpg" class="card-img-top" alt="card-grid-image">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-            </div>
-        </div>
-    </div>
-        <h2>Postres</h2>
-        <div class="row row-cols-1 row-cols-sm-2 g-3">
-          <div class="col">
-            <div class="card">
-              <img src="../media/torta.jpg" class="card-img-top" alt="card-grid-image">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="../media/tiramisu.jpg" class="card-img-top" alt="card-grid-image">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="../media/crepe.jpg" class="card-img-top" alt="card-grid-image">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="../media/helado.jpg" class="card-img-top" alt="card-grid-image">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              </div>
-            </div>
-          </div>
-        </div>
+    </section>        
       <footer>
         <p>Todos los derechos reservador por copyright.</p>
         <p>El sitio fue desarrollado por Matias Gonzalez</p>
