--- a/pages/quien.html
+++ b/pages/quien.html
@@ -9,17 +9,24 @@
     <title>¿Quienes somos?</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="quien.html">¿Quienes somos?</a></li>
-                <li><a href="trabaja.html">Trabaja Con Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav class="barra navbar navbar-expand-lg fixed-top">
+        <div class="container">
+            <a href="#" class="navbar-brand"> <span>El Bodegón de Alberto</span></a>
+            <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbar-start"
+                aria-controls="navbar-start" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+                <div class="collapse navbar-collapse" id="navbar-start">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="menu.html">Menu</a></li>
+                        <li class="nav-item"><a class="nav-link" href="quien.html">¿Quienes somos?</a></li>
+                        <li class="nav-item"><a class="nav-link" href="trabaja.html">Trabaja Con Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+        </div> 
+    </nav>
     <div>
         <p class="textop">
             En nuestro restaurante patagónico, nos enorgullece presentarnos como guardianes de la auténtica cocina de la Patagonia. Con una pasión inquebrantable por los sabores locales y un profundo respeto por la tierra que nos rodea, nos esforzamos por ofrecer una experiencia gastronómica que celebra la rica herencia culinaria de esta región única. Nuestro equipo está formado por chefs expertos que dominan el arte de transformar los ingredientes más frescos y naturales en platos que sorprenden y deleitan a nuestros comensales. 
